--- a/apps/ledger-live-desktop/static/i18n/ru/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ru/app.json
@@ -828,6 +828,10 @@
         "near" : {
           "title" : "Угадайте что?",
           "description" : "У Ledger более низкие комиссии по сравнению с вашим валидатором. На этот процесс может уйти вплоть до 65 часов."
+        },
+        "elrond" : {
+          "title" : "Угадайте что?",
+          "description" : "У Ledger более низкие комиссии по сравнению с вашим валидатором. На этот процесс может уйти вплоть до 10 дней."
         }
       },
       "delegation" : {
@@ -849,6 +853,9 @@
         },
         "near" : {
           "description" : "Стейкайте NEAR с помощью валидатора «Ledger by Figment». Монеты остаются вашими, а их безопасность обеспечивает Ledger."
+        },
+        "elrond" : {
+          "description" : "Стейкайте ELROND с помощью валидатора «Ledger by Figment». Монеты остаются вашими, а их безопасность обеспечивает Ledger."
         }
       }
     }
@@ -2169,7 +2176,7 @@
     }
   },
   "send" : {
-    "title" : "Отправить",
+    "title" : "Отправка",
     "titleNft" : "Отправить NFT",
     "totalSpent" : "Всего будет списано",
     "steps" : {
@@ -2261,6 +2268,13 @@
     },
     "switchButton" : "Переключиться на {{language}}",
     "no" : "Мне не хочется"
+  },
+  "deviceRename" : {
+    "title" : "Переименовать {{ productName }}",
+    "chooseName" : "Укажите название",
+    "placeholder" : "Stax Олега",
+    "remainingCharacters" : "Осталось символов: {{ remainingCharacters }}",
+    "renamed" : "Название {{ productName }} изменено на\n«{{ name }}» "
   },
   "deviceLocalization" : {
     "language" : "Язык устройства",
@@ -3310,7 +3324,7 @@
     "simpleOperation" : {
       "modes" : {
         "withdrawUnbonded" : {
-          "title" : "Вывести",
+          "title" : "Вывод средств",
           "description" : "Вывод разблокированных активов станет возможет по истечении 28 дней после разблокировки.",
           "info" : "Впоследствии вы сможете вывести разблокированные средства на свой баланс."
         },
@@ -3430,7 +3444,7 @@
       },
       "withdraw" : {
         "flow" : {
-          "title" : "Вывести",
+          "title" : "Вывод средств",
           "steps" : {
             "amount" : {
               "title" : "Сумма"
@@ -3536,7 +3550,7 @@
         "available" : "Доступно для вывода"
       },
       "unstake" : "Вывести из стейкинга",
-      "withdraw" : "Вывод средств",
+      "withdraw" : "Вывести",
       "activeTooltip" : "Стейкинг приносит вознаграждения",
       "inactiveTooltip" : "Без стейкинга средства не приносят вознаграждения",
       "commission" : "Комиссия",
@@ -3786,6 +3800,9 @@
       "catalogRampServerDesc" : "Переключайтесь между несколькими операторами услуг обмена",
       "enablePlatformDevTools" : "Включить инструменты разработчика на платформе",
       "enablePlatformDevToolsDesc" : "Разрешить открывать окно инструментов разработчика на платформе",
+      "customLockScreen" : "Собственные картинки для экрана блокировки",
+      "customLockScreenDesc" : "Отладка собственных картинок для экрана блокировки",
+      "customLockScreenCTA" : "Запустить",
       "featureFlagsTitle" : "Определённые фича-флаги (feature flags), используемые в Ledger Live",
       "featureFlagsDesc" : "Переписанные значения будут сброшены в случае перезапуска приложения. Принимаются лишь валидные строки JSON.",
       "featureFlagsEdit" : "Редактировать",
@@ -3850,10 +3867,6 @@
         "experimentalCurrencies" : {
           "title" : "Экспериментальная интеграция",
           "description" : "Использовать доступные экспериментальные интеграции криптовалют."
-        },
-        "experimentalExecutionOnRenderer" : {
-          "title" : "Экспериментальная сеть",
-          "description" : "Используйте экспериментальную сеть для оптимизации взаимодействия с Ledger Live через VPN. Активируйте функцию только в случае возникновения системных ошибок при использовании VPN."
         },
         "experimentalLanguages" : {
           "title" : "Тестирование перевода",
@@ -5653,7 +5666,7 @@
     },
     "send" : {
       "memo" : {
-        "label" : "Текст Memo (необязательно)",
+        "label" : "Memo (необязательно)",
         "characterCount" : "{{memoLength}} / {{memoMaxLength}}"
       }
     }
@@ -5668,6 +5681,7 @@
   },
   "customImage" : {
     "title" : "Персонализированный экран блокировки",
+    "managerCTA" : "Изображение экрана блокировки",
     "steps" : {
       "choose" : {
         "stepLabel" : "Выбрать изображение",
