fix(desktop): fix to color and message warning banner

--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -3524,7 +3524,7 @@
     }
   },
   "vechain": {
-    "warning": "The graph is not available for this token"
+    "noGraphWarning": "The graph is not available for this token"
   },
   "near": {
     "account": {
