--- a/apps/ledger-live-mobile/src/locales/en/common.json
+++ b/apps/ledger-live-mobile/src/locales/en/common.json
@@ -3374,7 +3374,8 @@
     "recipient": {
       "scan": "Scan QR code",
       "enterAddress": "Enter address",
-      "input": "Enter address"
+      "input": "Enter address",
+      "verifyAddress": "Please verify the address matches the one shared by the recipient."
     },
     "amount": {
       "available": "Total available",
