feat: add earn on main side bar (#2934)
* feat: add earn on side bar (WIP)

* chore: add changeset

* feat: add earn route under ff

* feat: add ptxEarn ff

* fix: change earn route position

* fix: remove ptxEarn from routes

* feat: added basic PW test to open earn app

* test(lld): update screenshots (ubuntu-latest)

lld, test, screenshot

* test(lld): update screenshots (windows-latest)

lld, test, screenshot

---------

Co-authored-by: Gregor Gilchrist <gregor.gilchrist@ledger.fr>
Co-authored-by: live-github-bot[bot] <team-live@ledger.fr>

--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -214,6 +214,7 @@
     "stars": "Starred accounts",
     "accounts": "Accounts",
     "manager": "My Ledger",
+    "earn": "Earn",
     "exchange": "Buy / Sell",
     "swap": "Swap",
     "lend": "Lend",
@@ -4069,7 +4070,7 @@
       "tr": "Turkish",
       "ja": "Japanese",
       "ko": "Korean",
-      "pt" : "Português (Brasil)"
+      "pt": "Português (Brasil)"
     }
   },
   "theme": {
